Signing assertions compliance report (#1357)
* Added a new column for Signing assertions to allow classifications of modules to where they belong
* Model changes to accommodate classification for signing assertions
* Added Support Signing Assertions for Compliance Report. Added operational script for the new signing assertions. Added modal pop-up and button for accepting
* Allowed markdown for the Modal messages

--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -27,6 +27,7 @@
 @import './SecureFileSubmissions.scss';
 @import './Settings.scss';
 @import './SettingsTabs.scss';
+@import './SigningAssertions.scss';
 @import './Spreadsheet.scss';
 @import './Tooltip.scss';
 @import './TooltipWhenDisabled.scss';
