Summary Tooltip Instructions (#1371)
* Prepopulating no longer checks renewable percentage, unless it was checked previously

* Fixing some input issues

* Fixed an issue with the input field crashing because it's trying to use a .replace on a number

--- a/frontend/styles/ComplianceReporting.scss
+++ b/frontend/styles/ComplianceReporting.scss
@@ -40,7 +40,7 @@
   .right-toolbar-container .actions-container {
     margin-bottom: 1rem;
 
-    #new-compliance-report {
+    #new-compliance-report, #new-exclusion-report {
       margin: 0;
     }
   }
