--- a/frontend/styles/Spreadsheet.scss
+++ b/frontend/styles/Spreadsheet.scss
@@ -87,6 +87,10 @@
         select {
           width: 100%;
         }
+
+        .fa-info-circle {
+          color: $light-font;
+        }
       }
     }
   }
