Fixed bugs found in sprint review and added permission check to the submit button (#1366)

--- a/frontend/styles/Schedule.scss
+++ b/frontend/styles/Schedule.scss
@@ -288,8 +288,15 @@
       text-align: left !important;
     }
   }
+
   .right {
     text-align: right;
+  }
+
+  &.btn-container {
+    .btn, .overlay-trigger {
+      margin: 0 0.4rem;
+    }  
   }
 }
 
