--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -187,7 +187,7 @@ h1 {
 }
 
 .btn-container {
-  .btn + .btn, .btn + div, div + div {
+  .btn + .btn, .btn + div, div + div, div + .btn {
     margin-left: 0.5rem;
     margin-right: 0.3rem;
   }
