--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -32,6 +32,7 @@
 @import './Tooltip.scss';
 @import './TooltipWhenDisabled.scss';
 @import './User.scss';
+@import './Snapshot.scss';
 @import './variables.scss';
 @import '../node_modules/react-redux-toastr/src/styles/index.scss';
 
@@ -42,17 +43,17 @@ body {
 }
 
 #main {
-  position: relative; 
+  position: relative;
   padding: 3rem;
   padding-bottom: 70px;
 
   @include tablet {
     padding-top: 30px !important;
-  } 
+  }
 }
 
-#root, 
-[data-reactroot], 
+#root,
+[data-reactroot],
 #root > div,
 #root div.App {
   height: 100%;
@@ -229,7 +230,7 @@ h1 {
   }
 }
 
-// Tables 
+// Tables
 
 table {
   margin: 0;
@@ -244,7 +245,7 @@ table {
   }
 }
 
-.table-bordered > thead > tr > td, 
+.table-bordered > thead > tr > td,
 .table-bordered > thead > tr > th {
   border-bottom-width: 0 !important;
 }
