--- a/frontend/styles/Snapshot.scss
+++ b/frontend/styles/Snapshot.scss
@@ -1,4 +1,9 @@
-.spreadsheet {
+.spreadsheet.snapshot_a,
+.spreadsheet.snapshot_b,
+.spreadsheet.snapshot_c,
+.spreadsheet.snapshot_d,
+.spreadsheet.snapshot_summary {
+  margin-bottom: 2rem;
   min-width: 100%;
   table-layout: auto;
   overflow-x: auto;
@@ -20,8 +25,6 @@
   td.underlined {
     border-bottom: 2px solid #000 !important;
   }
-
-  margin-bottom: 2em;
 
   .read-only {
     background: #fff !important;
