Integrated the actions and checks for the buttons (#1415)
* Integrated the actions and checks for the buttons
* Status in the list should now be reflective for government users as well

--- a/frontend/styles/Schedule.scss
+++ b/frontend/styles/Schedule.scss
@@ -296,7 +296,11 @@
   &.btn-container {
     .btn, .overlay-trigger {
       margin: 0 0.4rem;
-    }  
+    }
+
+    .overlay-trigger .btn {
+      margin: 0;
+    }
   }
 }
 
