Changed validation message for the save tooltip. Added similar validation to submit button

--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -193,7 +193,7 @@ h1 {
     margin-right: 0.4rem;
   }
 
-  .btn:last-child, div:last-child {
+  .btn:last-child, div:last-child, div.overlay-trigger:last-child {
     margin-right: 0;
   }
 }
